# kwin-zones

./: .kde-ci.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  ext-zones-v1.xml.license  main.cpp  xx-zones-v1.xml.license  zones.cpp  zones.h  zonessettings.kcfg  zonessettings.kcfgc
src/client/: CMakeLists.txt  zoneitemattached.cpp  zoneitemattached.h  zonemanager.cpp  zonemanager.h
test/: later.qml  single.qml  test.qml  twowindows.qml  ultrawow.qml
